# RV64emu-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  devbox.json
doc/: riscv-test.md
examples/: debug_system.rs  linux_system.rs  simple_system.rs  ysyx_am_system.rs
my-flakes/: set-env.sh
ready_to_run/riscv-tests/dump/: rv64mi-p-access.dump  rv64mi-p-breakpoint.dump  rv64mi-p-csr.dump  rv64mi-p-illegal.dump  rv64mi-p-ld-misaligned.dump  rv64mi-p-lh-misaligned.dump  rv64mi-p-lw-misaligned.dump  rv64mi-p-ma_addr.dump  rv64mi-p-ma_fetch.dump  rv64mi-p-mcsr.dump  rv64mi-p-sbreak.dump  rv64mi-p-scall.dump  rv64mi-p-sd-misaligned.dump  rv64mi-p-sh-misaligned.dump  rv64mi-p-sw-misaligned.dump  rv64mi-p-zicntr.dump  rv64si-p-csr.dump  rv64si-p-dirty.dump  rv64si-p-icache-alias.dump  rv64si-p-ma_fetch.dump  rv64si-p-sbreak.dump  rv64si-p-scall.dump  rv64si-p-wfi.dump  rv64ua-p-amoadd_d.dump  rv64ua-p-amoadd_w.dump  rv64ua-p-amoand_d.dump  rv64ua-p-amoand_w.dump  rv64ua-p-amomax_d.dump  rv64ua-p-amomax_w.dump  rv64ua-p-amomaxu_d.dump  rv64ua-p-amomaxu_w.dump  rv64ua-p-amomin_d.dump  rv64ua-p-amomin_w.dump  rv64ua-p-amominu_d.dump  rv64ua-p-amominu_w.dump  rv64ua-p-amoor_d.dump  rv64ua-p-amoor_w.dump  rv64ua-p-amoswap_d.dump  rv64ua-p-amoswap_w.dump  rv64ua-p-amoxor_d.dump  (+151 more)
ready_to_run/riscv-tests/elf/: rv64mi-p-access  rv64mi-p-breakpoint  rv64mi-p-csr  rv64mi-p-illegal  rv64mi-p-ld-misaligned  rv64mi-p-lh-misaligned  rv64mi-p-lw-misaligned  rv64mi-p-ma_addr  rv64mi-p-ma_fetch  rv64mi-p-mcsr  rv64mi-p-sbreak  rv64mi-p-scall  rv64mi-p-sd-misaligned  rv64mi-p-sh-misaligned  rv64mi-p-sw-misaligned  rv64mi-p-zicntr  rv64si-p-csr  rv64si-p-dirty  rv64si-p-icache-alias  rv64si-p-ma_fetch  rv64si-p-sbreak  rv64si-p-scall  rv64si-p-wfi  rv64ua-p-amoadd_d  rv64ua-p-amoadd_w  rv64ua-p-amoand_d  rv64ua-p-amoand_w  rv64ua-p-amomax_d  rv64ua-p-amomax_w  rv64ua-p-amomaxu_d  rv64ua-p-amomaxu_w  rv64ua-p-amomin_d  rv64ua-p-amomin_w  rv64ua-p-amominu_d  rv64ua-p-amominu_w  rv64ua-p-amoor_d  rv64ua-p-amoor_w  rv64ua-p-amoswap_d  rv64ua-p-amoswap_w  rv64ua-p-amoxor_d  (+151 more)
src/: bus.rs  clint.rs  config.rs  cpu_core.rs  cpu_icache.rs  csr_regs.rs  csr_regs_define.rs  device_dram.rs  device_kb.rs  device_mouse.rs  device_rtc.rs  device_sifive_uart.rs  device_trait.rs  device_uart.rs  device_vga.rs  device_vgactl.rs  dram.rs  ftrace.rs  gpr.rs  inst_base.rs  inst_decode.rs  inst_rv64a.rs  inst_rv64i.rs  inst_rv64m.rs  inst_rv64z.rs  itrace.rs  lib.rs  main.rs  mcsr_regs.rs  mmu.rs  rvsim.rs  sifive_clint.rs  sv39.rs  tools.rs  traptype.rs
src/dbg/: debug_module.rs  debug_module_new.rs  debug_module_register.rs  dm_interface.rs  jtag_driver.rs  jtag_state.rs  main.rs  mod.rs  remote_bitbang.rs
src/device/: device_16550a.rs  device_am_kb.rs  device_am_mouse.rs  device_am_rtc.rs  device_am_uart.rs  device_am_vga.rs  device_am_vgactl.rs  device_dram.rs  device_kb.rs  device_memory.rs  device_mouse.rs  device_rtc.rs  device_sifive_clint.rs  device_sifive_plic.rs  device_sifive_uart.rs  device_trait.rs  device_uart.rs  device_vga.rs  device_vgactl.rs  devicetree.dtb  dts-ducore.dts  dts.dts  mod.rs
src/difftest/: difftest_trait.rs  mod.rs
src/inst/: inst_base.rs  inst_rv64a.rs  inst_rv64i.rs  inst_rv64m.rs  inst_rv64z.rs
src/rv64core/: bus.rs  cpu_core.rs  cpu_icache.rs  csr_regs.rs  csr_regs_define.rs  gpr.rs  inst_decode.rs  mmu.rs  mod.rs  traptype.rs
src/rv64core/cache/: cache_system.rs  cpu_dcache.rs  cpu_icache.rs  mod.rs
src/rv64core/inst/: inst_base.rs  inst_rv64a.rs  inst_rv64c.rs  inst_rv64i.rs  inst_rv64m.rs  inst_rv64z.rs  mod.rs
src/rv64core/mmu/: cpu_mmu.rs  mmu.rs  mod.rs  sv39.rs  sv48.rs  sv57.rs  vm_info.rs
src/trace/: ftrace.rs  itrace.rs  mod.rs  traces.rs
tests/: riscv-tests.rs
