[package]
name = "riscv64-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }

ring-channel = "0.11.0"
hashbrown = "0.13.2"
bitfield-struct = "0.3.2"
enum_dispatch = "0.3.11"
crossbeam-channel = "0.5.7"
log = "0.4.17"

sdl2 = {version="0.35" ,optional = true }
llvm-sys = {version = "150",optional = true }
cfg-if = "1.0.0"
simple_logger = "4.1.0"


[features]
# default = ["rv_debug_trace","support_am"]
# default = ["support_am"]
# default = ["device_sdl2"]
default = ["caches"]
device_sdl2 = ["dep:sdl2"]
rv_debug_trace = ["dep:llvm-sys"]
caches = ["inst_cache", "decode_cache"]
inst_cache = []
decode_cache = []
support_am = []
expr_mutithread = []



[[example]]
name = "simple_system"


